--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
     <title>Etch-A-Sketch</title>
 </head>
 <body>
+    <div class="container"></div>
     
+
+    <script src="script.js"></script>
 </body>
 </html>
