--- a/index.html
+++ b/index.html
@@ -1,15 +1,22 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="styles.css">
     <title>Etch-A-Sketch</title>
 </head>
+
 <body>
-    <div class="container"></div>
-    
+
+    <section class="section">
+        <div class="container"></div>
+    </section>
+
 
     <script src="script.js"></script>
 </body>
+
 </html>
