--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
 <body>
 
     <section class="section">
+        <button class="button">New Grid</button>
         <div class="container"></div>
     </section>
 
