Add classes for UI styling

--- a/index.html
+++ b/index.html
@@ -10,9 +10,17 @@
 </head>
 
 <body>
+<section class="section">
+    <div class="header">
+        <h1 class="h1">Etch-a-Sketch</h1>
+        <button class="button">Create New Grid</button>
+    </div>
+</section>
+
+
 
     <section class="section">
-        <button class="button">New Grid</button>
+
         <div class="container"></div>
     </section>
 
